[metadata]
name = plp
summary = PHP-like Python
author = Chris Norman
author-email = chris.norman2@googlemail.com
description-file = README.md
long-description-content_type = text/markdown
home-page = https://github.com/chrisnorman7/
license = MPL-2

[tool:pytest]
filterwarnings = error
testpaths = "tests"
addopts = "-xq"

[flake8]
exclude = env, .eggs, build
